--- a/4. calculator/style.css
+++ b/4. calculator/style.css
@@ -3,40 +3,47 @@
     padding: 0;
     box-sizing: border-box;
 }
-#calculator{
-    background-color: #95afc0;
+.container{
+    background-color: #182C61;
+    padding: 10px;
+}
+#cal-body{
+    background-color: #747d8c;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.container{
-    background-color: #3c6382;
-    padding: 15px;
-}
-.display input{
-    text-align: right;
-    font-size: 32px;
+#cal-body .display{
     width: 300px;
-    border: 0;
-    outline: 0;
-    padding: 10px;
+
 }
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 10px;
+#cal-body .display input{
+    padding: 20px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: right;
 }
-.header input{
-    width: 50px;
-    height: 50px;
-    border: 0;
-    margin: 0;
-    background-color: #30336b;
-    border-radius: 10px;
-    color: #fff;
-    font-size: 18px;
+#cal-body .head-btn{
+    background-color: #ff7f50;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
     cursor: pointer;
-    /* margin: 5px; */
+    color: #ced6e0;
+    box-shadow: inset 20px 20px 60px #f97e5176,
+            inset -20px -20px 60px #f97e5191; 
+}
+#cal-body .head-btn-sec{
+    background-color: #2f3542;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: #000;
+    box-shadow: inset 20px 20px 60px #cccccc,
+                inset -20px -20px 60px #f4f4f4;
 }
