--- a/3. qr code/style.css
+++ b/3. qr code/style.css
@@ -3,40 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
-.container{
-    background-color: #ffffff28;
-    width: 350px;
-    height: 300px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#qr-code{
+#qr-body{
     height: 100vh;
-    background-color: #2c2c2c;
-    color: #ffffff;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    background-color: #58B19F;
 }
-#qr-code input, #qr-code button{
-    padding: 10px;
+.container{
+    background-color: #58B19F;
+    padding: 15px;
+    border-radius: 5px;
+    border-radius: 0px;
+background: #e0e0e0;
+box-shadow:  26px 26px 52px #58B19F,
+             -26px -26px 52px #58B19F; 
+}
+.type-box{
+    width: 300px;
+}
+.type-box input{
+    width: 100%;
+    padding: 15px;
     border: none;
     outline: none;
-    /* border: 1px solid #000; */
 }
-#qr-code .btn-group{
-    display: flex;
+
+.btn{
+    width: 300px;
+    background-color: rebeccapurple;
 }
-#qr-code button{
-    background-color: #4834d4;
-    color: #ffffff;
-    cursor: pointer;
-}
-.qr-box{
-    margin-top: 20px;
+.display-img{
+    margin: 10px 0;
     text-align: center;
-    transition: 0.5s all;
+}
+.btn input{
+    width: 100%;
+    padding: 10px;
+    background-color: #55E6C1;
+    outline: none;
+    border: none;
+    font-size: 16px;
 }
